# prog-2-edutools

./: .gitignore  CMakeLists.txt  course-info.yaml
.coursecreator/course/: course.json
1 Input output/practice/: CMakeLists.txt  task-info.yaml  task.md
1 Input output/practice/src/: task.cpp
1 Input output/theory/: CMakeLists.txt  task-info.yaml  task.md
1 Input output/theory/src/: io.c  namespaces.cpp
10 std/: lesson-info.yaml
10 std/collections/: CMakeLists.txt
10 std/collections/src/: main.cpp
11  Cpp0x/: lesson-info.yaml
11  Cpp0x/1 basics/: CMakeLists.txt  task.md
11  Cpp0x/1 basics/src/: main.cpp
11  Cpp0x/2 move/: CMakeLists.txt
11  Cpp0x/2 move/src/: main.cpp
11  Cpp0x/3 lambda/: CMakeLists.txt
11  Cpp0x/3 lambda/src/: main.cpp
11  Cpp0x/4 smart pointers/: CMakeLists.txt  task.md
11  Cpp0x/4 smart pointers/src/: main.cpp
12 thread/theory/: CMakeLists.txt  task-info.yaml
12 thread/theory/src/: 0-threads.cpp  1-counter.cpp  2-prod-cons-err.cpp  3-prod-cons-mutex.cpp  4-prod-cons-raii.cpp  5-deadlock.cpp  6-cond-var.cpp
2 First class/: lesson-info.yaml
2 First class/1 classes and constructors/: CMakeLists.txt  task-info.yaml  task.md
2 First class/1 classes and constructors/src/: fraction.cpp
2 First class/2 destructors/: CMakeLists.txt
3 const ref/: lesson-info.yaml
3 const ref/1 const/: CMakeLists.txt  task-info.yaml
3 const ref/2 ref/: CMakeLists.txt  task-info.yaml
4 operators/: lesson-info.yaml
4 operators/1 arithmetic and stream/: CMakeLists.txt  task-info.yaml
4 operators/1 arithmetic and stream/src/: main.cpp
4 operators/2 increment and conversion/: CMakeLists.txt  task-info.yaml
4 operators/2 increment and conversion/src/: main.cpp
4 operators/3 subscript and call/: CMakeLists.txt  task-info.yaml
4 operators/3 subscript and call/src/: main.cpp
4 operators/4 copy assignment/: CMakeLists.txt  task-info.yaml
4 operators/4 copy assignment/src/: main.cpp
5 trinity/: lesson-info.yaml
5 trinity/swap/: task.md
5 trinity/swap/src/: main.cpp
6 subtyping/: lesson-info.yaml
6 subtyping/1 basics/: CMakeLists.txt  task-info.yaml  task.md
6 subtyping/1 basics/src/: array-stack.cpp  array-stack.h  list-stack.cpp  list-stack.h  list.cpp  list.h  main.cpp  stack.cpp  stack.h
6 subtyping/2 private inheritacne/: CMakeLists.txt  task-info.yaml  task.md
6 subtyping/2 private inheritacne/src/: main.cpp
8 iterators/theory/: CMakeLists.txt  task.md
8 iterators/theory/src/: main.cpp
9 exceptions/: lesson-info.yaml
9 exceptions/theory/: CMakeLists.txt  task-info.yaml
9 exceptions/theory/src/: example.cpp  main.cpp
First class/: lesson-info.yaml
First class/classes and constructors/: CMakeLists.txt  task-info.yaml  task.md
First class/classes and constructors/src/: fraction.cpp
First class/destructors/: CMakeLists.txt  task-info.yaml  task.md
First class/destructors/src/: main.cpp
Input output/: lesson-info.yaml
Input output/practice/: CMakeLists.txt  task-info.yaml  task.md  task.temp.html
Input output/practice/test/: test.cpp
Input output/theory/: CMakeLists.txt  task-info.yaml  task.md
Input output/theory/src/: hello.cpp  io.cpp
cmake/: catch.cmake  utils.cmake
const ref/: lesson-info.yaml
const ref/const/: CMakeLists.txt  task-info.yaml  task.md
const ref/const/src/: array.cpp  array.h  main.cpp
const ref/ref/: task-info.yaml  task.md
const ref/ref/src/: main.cpp
copy assign 2/: lesson-info.yaml
copy assign 2/swap/: CMakeLists.txt
copy assign 2/swap/src/: main.cpp
inheritance/: lesson-info.yaml
inheritance/basics/: CMakeLists.txt  task.md
operators/: lesson-info.yaml
operators/arithmetic and stream/: CMakeLists.txt  task-info.yaml  task.md
operators/arithmetic and stream/src/: main.cpp
operators/copy assignment/: CMakeLists.txt  task-info.yaml
operators/increment and conversion/: CMakeLists.txt  task-info.yaml
operators/increment and conversion/src/: main.cpp
operators/subscript and call/: task-info.yaml
operators/subscript and call/src/: main.cpp
templates/: lesson-info.yaml
templates/example/: CMakeLists.txt
templates/example/src/: main.cpp
todo/copy constructor/: CMakeLists.txt  task-info.yaml
todo/copy constructor/src/: main.cpp
todo/explicit constructor/: CMakeLists.txt
todo/explicit constructor/src/: main.cpp
utils/: checkio.hpp
